--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -24,6 +24,14 @@ h1 {
     color: #576F72;
 }
 
+.telephone:link {
+    color: #7D9D9C;
+}
+
+.telephone:visited {
+    color: #576F72;
+}
+
 
 .btn-secondary {
     background-color: #F0EBE3;
