Origin/story/aad 46 (#18)
* Develop (#17)

* Story/aad 23 (#2)

* Initial views created

The current styling and layout are not for final product use.

* Getting sheets to work

Getting the base functionality of google sheets to work

* Work done on filters and styling

* Refactored filters

* Transitioning to Bootstrap 5.2.0

* Loading bootstrap locally

A local version of bootstrap has been loaded into the project. This will mean that we no longer need to rely on the CDN and we have a stable version of bootstrap

* Filter modal working

Automated filter population should now work, color and additional styling still needs to be done.

* Moved filter modal to its own file

Co-authored-by: Bishop <59637502+Iwasson@users.noreply.github.com>

* Story/aad 33 (#3)

* Expanding sheets controller

Added function to retrieve all shelter info from the info tab and last input from the forms.

* Creating Card List View

Created necessary routing and controller. Controller parses data from google sheets into an array of key values  that are then used to display cards contain shelter info on the frontend.

* Added working filter functionality (#5)

The submission of the search form will now display the shelters that match the criteria

* Update SheetsController.php (#9)

Offloading some of the work to the DB. This allows us to reduce the load time by reducing how many networking requests are issued. This backend change is used to reference the new DB info.

* Story/aad 44 (#11)

* Creating Info page for each shelter

Creating the get more info page for each of the shelters that are listed on the results page. Further styling is needed, and a button to direct to the mapview is needed.

* Update results.blade.php

Slugging the urls on the result page to make url more readable

* Adding images for shelters

These are temporary images for each of the shelters. Will need to talk to sponsors to get better sourced images

* 

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,6 +8,9 @@ Portland Aid Guide's color-palate:
 h1 {
     color: #576F72;
 }
+.noResults {
+    color: #576F72;
+}
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-text {
     color: #F0EBE3;
