--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -156,7 +156,7 @@ h1 {
 
 @media (max-width: 414px) {
     .top-image {
-        background: url("../images/top-main.jpg") no-repeat center; 
+        background: url("../images/top-main.webp") no-repeat center; 
         background-size: cover;
         background-position: bottom;
         height: 250px;
@@ -165,7 +165,7 @@ h1 {
 }
 @media (min-width: 415px) and (max-width: 768px) {
     .top-image {
-        background: url("../images/top-main.jpg") no-repeat center; 
+        background: url("../images/top-main.webp") no-repeat center; 
         background-size: cover;
         background-position: center;
         height: 300px;
@@ -174,7 +174,7 @@ h1 {
 }
 @media (min-width: 769px) {
     .top-image {
-        background: url("../images/top-main.jpg") no-repeat center; 
+        background: url("../images/top-main.webp") no-repeat center; 
         background-size: cover;
         background-position: center;
         height: 320px;
