--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,11 +1,7 @@
-/*
-Our colors:
-#F0EBE3 Tan
-#E4DCCF Dark Tan
-#7D9D9C Light Green
-#576F72 Dark Green
-*/
 h1 {
+    color: #576F72;
+}
+.noResults {
     color: #576F72;
 }
 .navbar-custom .navbar-brand,
@@ -24,6 +20,13 @@ h1 {
     color: #576F72;
 }
 
+.telephone:link {
+    color: #7D9D9C;
+}
+
+.telephone:visited {
+    color: #576F72;
+}
 
 .btn-secondary {
     background-color: #F0EBE3;
@@ -95,7 +98,6 @@ h1 {
     border-top: 2px solid #576F72;
 }
 
-
 @media (max-width: 414px) {
     .results {
         object-fit: cover; 
@@ -104,6 +106,27 @@ h1 {
     }
     .card-width {
         width: 100%;
+    }
+}
+@media (min-width: 415px) and (max-width: 768px) {
+    .results {
+        object-fit: cover; 
+        height: 200px; 
+        object-position: 15% 100%;
+    }
+    .card-width {
+        width: 75%;
+    }
+}
+@media (min-width: 769px) {
+    .results {
+        object-fit: cover; 
+        height: 250px; 
+        object-position: 15% 100%;
+    }
+    .card-width {
+        width: 50%;
+
     }
 }
 @media (min-width: 415px) and (max-width: 768px) {
@@ -133,11 +156,15 @@ h1 {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-
+.card {
+    background-color: #F0EBE3;
+    color: #576F72;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
 
 @media (max-width: 414px) {
     .top-image {
-        background: url("../images/top-main.jpg") no-repeat center; 
+        background: url("../images/top-main.webp") no-repeat center; 
         background-size: cover;
         background-position: bottom;
         height: 250px;
@@ -146,7 +173,7 @@ h1 {
 }
 @media (min-width: 415px) and (max-width: 768px) {
     .top-image {
-        background: url("../images/top-main.jpg") no-repeat center; 
+        background: url("../images/top-main.webp") no-repeat center; 
         background-size: cover;
         background-position: center;
         height: 300px;
@@ -155,7 +182,7 @@ h1 {
 }
 @media (min-width: 769px) {
     .top-image {
-        background: url("../images/top-main.jpg") no-repeat center; 
+        background: url("../images/top-main.webp") no-repeat center; 
         background-size: cover;
         background-position: center;
         height: 320px;
